# sentence-completion

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 1ebce9c0a10b_init.py
src/sentence_completion/: _version.py  completion.py  database.py  main.py  settings.py
src/sentence_completion/models/: __init__.py  base.py  completion.py  completion_config.py  user_input.py
